# c_stuffs

./: README.md
genetic_calculator/: CMakeLists.txt  main.c
object_oriented_c/: CMakeLists.txt  Class.h  debug.c  debug.h  main.c  new.c  new.h
object_oriented_c/Object/: Object.c  Object.h  Object.r
object_oriented_c/Set/: Set.c  Set.h  Set.r  Set_Methods.c
object_oriented_c/String/: String.c  String.h  String.r  String_Methods.c
